--- a/front/Cadastro/CSS/CssCadastro.css
+++ b/front/Cadastro/CSS/CssCadastro.css
@@ -40,10 +40,8 @@ body {
 }
 
 .page-header {
-    width: 100%;
-    padding: 2rem;
+    width: 90%;
     text-align: center;
-    margin-top: 2rem;
 }
 
 .header-image {
@@ -53,7 +51,6 @@ body {
 
 .main-title {
     font-size: 2.5rem;
-    margin: 1rem 0;
     text-shadow: 0 0 10px rgba(0, 224, 255, 0.5);
 }
 
@@ -63,15 +60,15 @@ body {
     border: 1px solid rgba(0, 224, 255, 0.2);
     box-shadow: var(--neon-shadow);
     backdrop-filter: blur(10px);
-    padding: 2rem;
-    width: 90%;
-    max-width: 800px;
-    margin: 2rem auto;
+    padding: 1rem;
+    width: 50%;
+    max-width: 30%;
+    
 }
 
 .form-grid {
     display: grid;
-    gap: 1.5rem;
+    gap: 0rem;
     margin-bottom: 2rem;
 }
 
