--- a/front/Login/CSS/LoginProf.css
+++ b/front/Login/CSS/LoginProf.css
@@ -461,6 +461,8 @@ body {
 }
 
 .botao {
+    display: flex;
+    justify-content: center;
     width: 100%;
     padding: 1.2rem;
     font-size: 1.1rem;
@@ -471,6 +473,7 @@ body {
     cursor: pointer;
     transition: all 0.3s ease;
     margin-top: 1rem;
+    text-decoration: none;
 }
 
 .botao:hover {
