--- a/front/Inicio/CSS/css.css
+++ b/front/Inicio/CSS/css.css
@@ -7,7 +7,6 @@
 
 .auth-container {
   font-family: "Poppins", sans-serif;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +30,7 @@
 
 .page-header {
   width: 100%;
-  padding: 2rem;
+
   background: linear-gradient(
     90deg,
     rgba(0, 224, 255, 0.1) 0%,
@@ -43,26 +42,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
   margin-top: 2rem;
+  margin-left: 2rem;
 }
-
-.page-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 200%;
-  height: 100%;
-  background: linear-gradient(
-    90deg,
-    transparent 25%,
-    rgba(0, 224, 255, 0.1) 50%,
-    transparent 75%
-  );
-  animation: header-shine 6s infinite;
-}
-
 .imagemheader {
   max-width: 120px;
   height: auto;
@@ -75,7 +57,6 @@
   font-size: 2.5rem;
   letter-spacing: 3px;
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
-  margin: 0;
 }
 
 .face-recognition-container {
@@ -126,7 +107,7 @@
 .auth-actions-container {
   display: flex;
   gap: 2rem;
-  margin: 2rem 0;
+  margin: 8.2rem;
 }
 
 .glowingbutton {
@@ -219,7 +200,7 @@
 @media (max-width: 768px) {
   .page-header {
     flex-direction: column;
-    gap: 1rem;
+
     padding: 1rem;
   }
 
