--- a/front/Inicio/CSS/css.css
+++ b/front/Inicio/CSS/css.css
@@ -82,7 +82,7 @@ body {
   border: 3px solid var(--primary-color);
   border-radius: 50%;
   overflow: hidden;
-  background: #0a0e14 url("./Recursos/FotoHolograma.webp") center/cover;
+  background: #0a0e14 url("../../Recursos/ImagemRecon.png") center/cover;
   transform-style: preserve-3d;
 }
 
